--- a/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.html
@@ -8,90 +8,95 @@
       </h1>
     </div>
     <div class="process">
+      <div class="leftSide">
+        <img src="/assets/img/howitworksman.svg" alt="">
+      </div>
+      <div class="rightSide">
+        <div class="row_01">
+          <div class="margined">
+            <div class="shadowed">
+              <img src="../../../assets/pic/howItWorksPic01.png" alt="">
+            </div>
+          </div>
+          <div class="verticalMiddle">
+            <div></div>
+            <div></div>
+          </div>
+          <div class="splitToFour topRight">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
 
-      <div class="row_01">
-        <div class="margined">
-          <div class="shadowed">
-            <img src="../../../assets/pic/howItWorksPic01.png" alt="">
+          <div class="margined">
+            <div class="shadowed">
+              <img src="../../../assets/pic/howItWorksPic02.png" alt="">
+            </div>
+          </div>
+          <div class="verticalMiddle">
+            <div></div>
+            <div></div>
+          </div>
+          <div class="splitToFour middleRight">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+
+          <div class="margined">
+            <div class="shadowed">
+              <img src="../../../assets/pic/howItWorksPic03.png" alt="">
+            </div>
+          </div>
+          <div class="verticalMiddle">
+            <div></div>
+            <div></div>
+          </div>
+          <div class="splitToFour bottomRight">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
           </div>
         </div>
-        <div class="verticalMiddle">
-          <div></div>
-          <div></div>
-        </div>
-        <div class="splitToFour topRight">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-        </div>
 
-        <div class="margined">
-          <div class="shadowed">
-            <img src="../../../assets/pic/howItWorksPic02.png" alt="">
+        <div class="row_02">
+          <div></div>
+          <div class="horizontalThree">
+            <div></div>
+            <div></div>
           </div>
         </div>
-        <div class="verticalMiddle">
-          <div></div>
-          <div></div>
-        </div>
-        <div class="splitToFour middleRight">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-        </div>
 
-        <div class="margined">
-          <div class="shadowed">
-            <img src="../../../assets/pic/howItWorksPic03.png" alt="">
+        <div class="row_03">
+          <div class="leftCorner">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+          <div class="middle">
+            <div></div>
+            <div></div>
+          </div>
+          <div class="rightCorner">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
           </div>
         </div>
-        <div class="verticalMiddle">
-          <div></div>
-          <div></div>
-        </div>
-        <div class="splitToFour bottomRight">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-        </div>
-      </div>
 
-      <div class="row_02">
-        <div></div>
-        <div class="horizontalThree">
-          <div></div>
+        <div class="row_04">
+          <div class="horizontalThree">
+            <div></div>
+            <div></div>
+          </div>
           <div></div>
         </div>
-      </div>
 
-      <div class="row_03">
-        <div class="leftCorner">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-        </div>
-        <div class="middle">
-          <div></div>
-          <div></div>
-        </div>
-        <div class="rightCorner">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-        </div>
-      </div>
-
-      <div class="row_04">
-        <div class="horizontalThree">
-          <div></div>
-          <div></div>
-        </div>
-        <div></div>
       </div>
 
     </div>
@@ -128,6 +133,17 @@
           <div></div>
           <div></div>
           <div></div>
+        </div>
+      </div>
+      <div class="bottomDivs">
+        <div>
+          <img src="/assets/img/howit2.png" alt="">
+        </div>
+        <div>
+          <img src="/assets/img/howit3.svg" alt="">
+        </div>
+        <div>
+          <img src="/assets/img/howit4.svg" alt="">
         </div>
       </div>
     </div>
