--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -73,7 +73,7 @@
     <h1>
       KIEMELT TÉMÁINK
     </h1>
-    <app-topics></app-topics>
+    <app-topics [folyamats]="folyamats"></app-topics>
     <div class="buttonWrap">
       <button class="hollow" routerLink="/tudastar">
         Tovább a tudástár teljes tartalmához
@@ -90,6 +90,6 @@
   <app-online-courses></app-online-courses>
 </div>
 
-<!-- <div class="howItWorks">
+<div class="howItWorks">
   <app-how-it-works></app-how-it-works>
-</div> -->
+</div>
