--- a/JegyzoInfo/ClientApp/src/app/pages/topic-page/topic-page.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/topic-page/topic-page.component.html
@@ -2,7 +2,7 @@
   <app-back></app-back>
   <div class="pagetitle">
     <h1>
-      Településképi arculati kézikönyv
+      {{ folyamat?.nev }}
     </h1>
   </div>
   <div *ngIf="folyamat" class="chaptersWrap">
