--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.html
@@ -7,20 +7,20 @@
     </div>
     <div class="side rightSide">
       <ul class="defaultMenu" [class.opened]="menuIsOpened">
-        <li>
-          <a pageScroll href="#scrollTudastar">
+        <li pageScroll href="#scrollTudastar">
+          <a >
             Tudástár
           </a>
           <hr/>
         </li>
-        <li>
-          <a pageScroll href="#scrollVideos">
+        <li pageScroll href="#scrollVideos">
+          <a>
             Videotár
           </a>
           <hr/>
         </li>
-        <li>
-          <a pageScroll href="#scrollCourses">
+        <li pageScroll href="#scrollCourses">
+          <a>
             Online képzéseink
           </a>
           <hr/>
