--- a/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/how-it-works/how-it-works.component.scss
@@ -27,8 +27,31 @@ $solidBorderColor: #A3B2B7;
   // max-width: 600px;
   margin: auto;
   margin-top: 50px;
-  background-color: lightgoldenrodyellow;
+  background-color: white;
   padding: 30px;
+  padding-bottom: 0;
+  display: flex;
+
+  > div{
+    width: 50%;
+  }
+
+  .leftSide{
+    display: flex;
+    align-items: center;
+    position: relative;
+    &::after{
+      content: url('/assets/img/lines.svg');
+      position: absolute;
+      top: 60px;
+      right: 0;
+    }
+    img{
+      position: relative;
+      top: -90px;
+      right: -120px;
+    }
+  }
 
   .row_01{
     display: grid;
@@ -191,8 +214,9 @@ $solidBorderColor: #A3B2B7;
 }
 
 .process2{
-  background-color: lightgoldenrodyellow;
+  background-color: white;
   padding: 30px;
+  padding-top: 0;
   .row1{
     display: flex;
     justify-content: center;
@@ -256,8 +280,18 @@ $solidBorderColor: #A3B2B7;
       }
     }
   }
+  .bottomDivs{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    img{
+      width: 100%;
+    }
+  }
 }
 
 .shadowed{
   box-shadow: 0px 4px 14px #DEE6EA;
+  min-height: 124px;
+  display: flex;
+  align-items: center;
 }
