--- a/JegyzoInfo/ClientApp/src/app/pages/articles/articles.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/articles/articles.component.html
@@ -30,55 +30,59 @@
         </div>
       </div>
       <div class="col-md-9">
-        <div class="articlesList">
-          <article>
-            <h5>
-              GDPR - a nonprofitoknál még mindig aktuális
-            </h5>
-            <div class="labelsWrap">
-              <span>
-                számviteli szabályzatok
-              </span>
-              <span>
-                TB JÁRULÉK
-              </span>
-            </div>
-            <p>
-              A vállalkozásokat és az állami szervezeteket egyaránt széles körben érintő új adatkezelési szabályrendszer, a GDPR a társaságok sajátos csoportját képező nonprofit szervezetek körére is új előírásokat tartalmaz. A szabályok pontos alkalmazását szolgálta a Nemzeti Adatvédelmi és Információszabadság Hatóság e témakörben közzétett állásfoglalása, amit az alábbiakban vázlatosan összegzünk.
-            </p>
-            <div class="date">
-              <div class="clockIcon">
-                2018.01.21.
-              </div>
-            </div>
-          </article>
-          <article class="withPic">
-            <div class="leftSide">
+        <div class="articlesList" *ngIf="articles">
+          <ng-container *ngFor="let article of articles">
+            <article *ngIf="article.bevezetoKepUrl==''; else withPic">
               <h5>
-                Változtak-e az EKÁER-bejelentéssel kapcsolatos szabályok a BREXIT miatt?
+                {{ article.cim }}
               </h5>
-            </div>
-            <div class="rightSide">
-              <div class="labelsWrap">
+              <!-- <div class="labelsWrap">
                 <span>
                   számviteli szabályzatok
                 </span>
                 <span>
                   TB JÁRULÉK
                 </span>
-              </div>
+              </div> -->
               <p>
-                A vállalkozásokat és az állami szervezeteket egyaránt széles körben érintő új adatkezelési szabályrendszer, a GDPR a társaságok sajátos csoportját képező nonprofit szervezetek körére is új előírásokat tartalmaz. A szabályok pontos alkalmazását szolgálta a Nemzeti Adatvédelmi és Információszabadság Hatóság e témakörben közzétett állásfoglalása, amit az alábbiakban vázlatosan összegzünk.
+                {{ article.bevezeto }}
               </p>
               <div class="date">
                 <div class="clockIcon">
-                  2018.01.21.
+                  {{ article.megjelenesDatum | date : 'YYYY-MM-dd' }}
                 </div>
               </div>
-            </div>
-          </article>
+            </article>
+            <ng-template #withPic>
+              <article class="withPic">
+                <div class="leftSide" style="background-image: url('{{ article.bevezetoKepUrl }}');">
+                  <h5>
+                    {{ article.cim }}
+                  </h5>
+                </div>
+                <div class="rightSide">
+                  <!-- <div class="labelsWrap">
+                    <span>
+                      számviteli szabályzatok
+                    </span>
+                    <span>
+                      TB JÁRULÉK
+                    </span>
+                  </div> -->
+                  <p>
+                    {{ article.bevezeto }}
+                  </p>
+                  <div class="date">
+                    <div class="clockIcon">
+                      {{ article.megjelenesDatum | date : 'YYYY-MM-dd' }}
+                    </div>
+                  </div>
+                </div>
+              </article>
+            </ng-template>
+          </ng-container>
           <div class="buttonWrap">
-            <button class="hollow">
+            <button *ngIf="counter < articleList.length" class="hollow" (click)="clickMoreArticles()">
               További cikkek betöltése
             </button>
           </div>
