--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -34,22 +34,20 @@
       </div>
       <div class="col-lg-5">
         <div class="rightSide">
-          <section>
+          <section *ngIf="article">
             <h2>
               JEGYZŐBLOG
             </h2>
-            <a routerLink="/cikk">
+            <a routerLink="/cikk/{{ article.cikkID }}">
               <div class="whiteBack">
                 <h3>
-                  Közfoglalkoztatási programok pénzügyi-számviteli dokumentálása
+                  {{ article.cim }}
                 </h3>
                 <span class="clockIcon">
-                  2020-01-08
+                  {{ article.megjelenesDatum | date : 'YYYY-MM-dd' }}
                 </span>
                 <p>
-                  A Magyar Közlöny 222. számában jelent meg a kötelező legkisebb munkabér (minimálbér) és a garantált bérminimum
-                  megállapításáról szóló 367/2019 (XII.30.) Korm.rendelet. (http://www.kozlonyok.hu/nkonline/ MKPDF/hiteles/mk19222.pdf)
-                  <br/>A Korm.rendeletben foglaltak szerint 2020. január 1-től:
+                  {{ article.bevezeto }}
                 </p>
                 <hr/>
               </div>
