--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -38,7 +38,7 @@
             <h2>
               JEGYZŐBLOG
             </h2>
-            <a routerLink="/cikk/{{ article.cikkID }}">
+            <a routerLink="/cikk/{{ article.seoUrl }}">
               <div class="whiteBack">
                 <h3>
                   {{ article.cim }}
