--- a/JegyzoInfo/ClientApp/src/app/pages/articles/articles.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/articles/articles.component.scss
@@ -12,10 +12,13 @@
 
 .articlesList{
   margin-bottom: 160px;
+  a{
+    display: block;
+    margin-bottom: 20px;
+  }
   article{
     background-color: white;
     padding: 30px 40px 20px 40px;
-    margin-bottom: 20px;
     box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
     @media(max-width: 575px){
       padding-left: 10px;
