article deep shit

--- a/JegyzoInfo/ClientApp/src/app/pages/articles/articles.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/articles/articles.component.html
@@ -50,7 +50,7 @@
                 </p>
                 <div class="date">
                   <div class="clockIcon">
-                    {{ article.megjelenesDatum | date : 'YYYY-MM-dd' }}
+                    {{ article.megjelenesDatum | date : 'YYYY.MM.dd.' }}
                   </div>
                 </div>
               </article>
