--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
@@ -214,6 +214,7 @@
         }
         a{
           color: $blueStandard !important;
+          cursor: pointer;
         }
         button{
           white-space: nowrap;
