--- a/JegyzoInfo/ClientApp/src/app/pages/videos-page/videos-page.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/videos-page/videos-page.component.scss
@@ -6,9 +6,11 @@
     background-color: white;
     margin-bottom: 40px;
     .video{
-      img{
+      video{
         min-width: 100%;
         max-width: 100%;
+      }
+      img{
       }
     }
     .details{
