--- a/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/_core/navigation/navigation.component.scss
@@ -1,6 +1,10 @@
 @import "../../../../varsAndMixins.scss";
 
 nav{
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  width: 100%;
   display: flex;
   background-color: white;
   .container{
