--- a/JegyzoInfo/ClientApp/src/app/components/course/course.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/components/course/course.component.scss
@@ -51,6 +51,15 @@
     margin-top: 31px;
     display: flex;
     align-items: center;
+    .leftSide{
+      width: 120px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img{
+        max-width: 120px;
+      }
+    }
     .rightSide{
       margin-left: 31px;
       h6{
