--- a/JegyzoInfo/ClientApp/src/app/components/course/course.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/course/course.component.html
@@ -1,48 +1,53 @@
 <div class="courseWrap">
   <h4>
-    Önkormányzati adatvédelmi tisztviselő (DPO) - intenzív kurzus
+    {{ event.nev }}
   </h4>
   <div class="desc">
     <h6>
       A képzés rövid ismertetése:
     </h6>
-    <p>
-      A képzés célja az, hogy segítsen eligazodni a GDPR rendelet jelentette kihívások okozta, növekvő jelentőségű adatvédelmi szabályozások útvesztőiben, és szakszerű, pontos szakmai segítséget nyújtson az ezzel összefüggő feladatok elvégzéséhez. Fogalmi, értelmi, és gyakorlati alapokra helyezett képzésünk végeztével a hatályos adatvédelmi és adatkezelési szabályozások kifejezetten önkormányzati szemszögből megközelítve lesznek egyértelműbbek és kivitelezhetőbbek az újdonsült adatvédelmi tisztviselők számára. Igyekszünk azonnali segítséget nyújtani minden tisztázásra szoruló kérdésben. Az új jogszabályi előírásoknak megfelelően köteles kijelölni adatvédelmi tisztségviselőt minden olyan vállalat/önkormányzat, ahol:
-    </p>
-    <ul>
-      <li>
-        az adatkezelést, adatfeldolgozást Hatóság vagy közfeladatot ellátó szerv végzi
-      </li>
-      <li>
-        a szervezet alaptevékenysége olyan adatkezelési műveleteket foglalnak magukban, amelyek jellegüknél, hatókörüknél és/vagy céljaiknál fogva az érintettek rendszeres és szisztematikus nagymértékű megfigyelését teszik szükségessé,
-      </li>
-      <li>
-        vagy az adatkezelő vagy az adatfeldolgozó fő tevékenységei különleges személyes adatok nagy számban történő kezelését foglalják magukban.
-      </li>
-    </ul>
+    <div [innerHTML]="event.reszletekTartalom">
+      <p>
+        A képzés célja az, hogy segítsen eligazodni a GDPR rendelet jelentette kihívások okozta, növekvő jelentőségű adatvédelmi szabályozások útvesztőiben, és szakszerű, pontos szakmai segítséget nyújtson az ezzel összefüggő feladatok elvégzéséhez. Fogalmi, értelmi, és gyakorlati alapokra helyezett képzésünk végeztével a hatályos adatvédelmi és adatkezelési szabályozások kifejezetten önkormányzati szemszögből megközelítve lesznek egyértelműbbek és kivitelezhetőbbek az újdonsült adatvédelmi tisztviselők számára. Igyekszünk azonnali segítséget nyújtani minden tisztázásra szoruló kérdésben. Az új jogszabályi előírásoknak megfelelően köteles kijelölni adatvédelmi tisztségviselőt minden olyan vállalat/önkormányzat, ahol:
+      </p>
+      <ul>
+        <li>
+          az adatkezelést, adatfeldolgozást Hatóság vagy közfeladatot ellátó szerv végzi
+        </li>
+        <li>
+          a szervezet alaptevékenysége olyan adatkezelési műveleteket foglalnak magukban, amelyek jellegüknél, hatókörüknél és/vagy céljaiknál fogva az érintettek rendszeres és szisztematikus nagymértékű megfigyelését teszik szükségessé,
+        </li>
+        <li>
+          vagy az adatkezelő vagy az adatfeldolgozó fő tevékenységei különleges személyes adatok nagy számban történő kezelését foglalják magukban.
+        </li>
+      </ul>
+    </div>
   </div>
   <div class="timing">
     Képzési idő:
     <span class="clockIcon2">
-      40 óra (4x10 óra, heti bontásban)
+      {{ event.elearningKepzesiIdo }}
+      ({{ event.elearningUtemezes }})
     </span>
   </div>
-  <div class="teacher">
-    <div class="leftSide">
-      <img src="/assets/img/teacher.png" alt="" />
+  <ng-container *ngIf="szakis.length > 0">
+    <div class="teacher" *ngFor="let szaki of szakis">
+      <div class="leftSide" *ngIf="szaki.szakertoKepUrl">
+        <img [src]="szaki.szakertoKepUrl" alt="" />
+      </div>
+      <div class="rightSide">
+        <!-- <p>
+          Oktatónk:
+        </p> -->
+        <h6>
+          {{ szaki.nev }}
+        </h6>
+        <span class="titule">
+          {{ szaki.szakterulet }}
+        </span>
+      </div>
     </div>
-    <div class="rightSide">
-      <p>
-        Oktatónk:
-      </p>
-      <h6>
-        Dr. Miklós Péter jogász
-      </h6>
-      <span class="titule">
-        adatvédelmi szakértő
-      </span>
-    </div>
-  </div>
+  </ng-container>
   <div class="buttWrap">
     <button class="orange">
       Szeretnék jelentkezni a képzésre
