--- a/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
+++ b/JegyzoInfo/ClientApp/src/app/pages/article/article.component.scss
@@ -191,6 +191,8 @@
             padding: 19px 40px;
             margin-bottom: 10px;
             cursor: pointer;
+            display: flex;
+            justify-content: space-between;
             &.chapterJsz{
               color: $blueStandard;
             }
