--- a/JegyzoInfo/ClientApp/src/styles.scss
+++ b/JegyzoInfo/ClientApp/src/styles.scss
@@ -169,7 +169,9 @@ button, button:focus{
   }
 }
 
-.arrorange{
+a.arrorange{
+  color: $orange !important;
+  font-size: 14px;
   &::after{
     content: url("/assets/img/arrorange.svg");
     transition: .2s linear;
