--- a/JegyzoInfo/ClientApp/src/app/pages/statute/statute.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/statute/statute.component.html
@@ -17,7 +17,7 @@
 </div>
 <div class="statuteWrap">
   <div class="container">
-    <div class="statute">
+    <!-- <div class="statute">
       <h5>
         2005. évi XCV. törvény <br/>
         az emberi alkalmazásra kerülő gyógyszerekről és egyéb, a gyógyszerpiacot szabályozó törvények módosításáról
@@ -40,6 +40,9 @@
   figyelembe véve a fentiek mellett, hogy e célkitűzéseket olyan eszközökkel kell elérni, amelyek nem hátráltatják a gyógyszerkutatás és -fejlesztés fejlődését, illetve az Európai Unión belüli gyógyszer-kereskedelmet
   a következő törvényt alkotja:
       </p>
+    </div> -->
+    <div class="statute jszakaszSzoveg" [innerHTML]="jsz">
+
     </div>
   </div>
 </div>
