topic by seourl

--- a/JegyzoInfo/ClientApp/src/app/components/topic/topic.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/topic/topic.component.html
@@ -19,7 +19,7 @@
       </li>
     </ul> -->
     <div class="openTopic">
-      <a class="arrorange" routerLink="/topic/{{ folyamat.folyamatID }}">
+      <a class="arrorange" [routerLink]="'/topic/' + folyamat.seoURL ">
         Téma megnyitása
       </a>
     </div>
