--- a/JegyzoInfo/ClientApp/src/app/components/document-sample/document-sample.component.html
+++ b/JegyzoInfo/ClientApp/src/app/components/document-sample/document-sample.component.html
@@ -1,8 +1,10 @@
 <div class="documentSampleWrap">
   <div class="text">
-    Felesleges vagyontárgyak hasznosítási és selejtezési rendjére vonatkozó szabályzat (2020)
+    {{ nev }}
   </div>
   <a class="downloadRect" href="#">
-    <img src="/assets/img/download.svg" alt="" width="20" />
+    <a [href]="url">
+      <img src="/assets/img/download.svg" alt="" width="20" />
+    </a>
   </a>
 </div>
