--- a/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/home/home.component.html
@@ -22,10 +22,10 @@
               </li>
             </ul>
             <div class="buttonWrap">
-              <button class="defaultBlue">
+              <button class="defaultBlue" pageScroll href="#scrollHowItWorks">
                 Többet szeretnék tudni
               </button>
-              <button class="defaultBlue">
+              <button class="defaultBlue" pageScroll href="#scrollTudastar">
                 Megnézem a kiemelt témákat
               </button>
             </div>
@@ -88,6 +88,6 @@
   <app-online-courses></app-online-courses>
 </div>
 
-<div class="howItWorks">
+<div class="howItWorks" id="scrollHowItWorks">
   <app-how-it-works></app-how-it-works>
 </div>
