--- a/JegyzoInfo/ClientApp/src/app/pages/statute/statute.component.html
+++ b/JegyzoInfo/ClientApp/src/app/pages/statute/statute.component.html
@@ -2,7 +2,7 @@
   <app-back>
     <div class="searcher">
       <div class="leftSide">
-        <input class="inText" type="text" placeholder="Keressen a szövegben" />
+        <input class="inText" type="text" placeholder="Keressen a szövegben" (keydown.enter)="search()" [(ngModel)]="searchTerm" />
         <input class="inPar" type="text" placeholder="Írja be a keresett paragrafus számát" />
       </div>
       <div class="rightSide">
@@ -17,31 +17,7 @@
 </div>
 <div class="statuteWrap">
   <div class="container">
-    <!-- <div class="statute">
-      <h5>
-        2005. évi XCV. törvény <br/>
-        az emberi alkalmazásra kerülő gyógyszerekről és egyéb, a gyógyszerpiacot szabályozó törvények módosításáról
-      </h5>
-      <p>
-        A törvény célja, hogy az Európai Közösség jogi aktusai, illetve egyéb nemzetközi jogi szabályok és ajánlások figyelembevételével meghatározza a gyógyszerrel, a gyógyszerellátással, valamint a gyógyszert felhasználók jogaival kapcsolatos alapvető rendelkezéseket.
-  A gyógyszerellátással kapcsolatos feltételrendszer meghatározása az állam feladata. Ennek keretében az állam meghatározza azon követelményrendszert, amely biztosítja, hogy a rászorulók biztonságos, hatásos, az előírásoknak megfelelő minőségű gyógyszerekhez juthassanak.
-  Az Országgyűlés az emberi egészség védelmét és helyreállítását szolgáló állami tevékenység részeként, az ezért viselt felelősségtől vezérelve,
-  szem előtt tartva, hogy a gyógyszerek gyártására, forgalmazására és felhasználására vonatkozó szabályok legfontosabb célja az emberi egészség megóvása, és a gyógyszerek forgalmazását és felhasználását illető intézkedések a mindenkori egészségpolitika részeként azt célozzák, hogy mindenki hozzájuthasson a gyógykezeléséhez szükséges gyógyszerhez,
-  felismerve ugyanakkor, hogy emberi felhasználásra kerülő gyógyszerek piacának jellemzője, hogy a gyógyszer végső felhasználójának, a betegeknek jelenleg még csekély a befolyása a gyógyszer kiválasztása során, és
-  figyelembe véve a fentiek mellett, hogy e célkitűzéseket olyan eszközökkel kell elérni, amelyek nem hátráltatják a gyógyszerkutatás és -fejlesztés fejlődését, illetve az Európai Unión belüli gyógyszer-kereskedelmet
-  a következő törvényt alkotja:
-      </p>
-      <p>
-        A törvény célja, hogy az Európai Közösség jogi aktusai, illetve egyéb nemzetközi jogi szabályok és ajánlások figyelembevételével meghatározza a gyógyszerrel, a gyógyszerellátással, valamint a gyógyszert felhasználók jogaival kapcsolatos alapvető rendelkezéseket.
-  A gyógyszerellátással kapcsolatos feltételrendszer meghatározása az állam feladata. Ennek keretében az állam meghatározza azon követelményrendszert, amely biztosítja, hogy a rászorulók biztonságos, hatásos, az előírásoknak megfelelő minőségű gyógyszerekhez juthassanak.
-  Az Országgyűlés az emberi egészség védelmét és helyreállítását szolgáló állami tevékenység részeként, az ezért viselt felelősségtől vezérelve,
-  szem előtt tartva, hogy a gyógyszerek gyártására, forgalmazására és felhasználására vonatkozó szabályok legfontosabb célja az emberi egészség megóvása, és a gyógyszerek forgalmazását és felhasználását illető intézkedések a mindenkori egészségpolitika részeként azt célozzák, hogy mindenki hozzájuthasson a gyógykezeléséhez szükséges gyógyszerhez,
-  felismerve ugyanakkor, hogy emberi felhasználásra kerülő gyógyszerek piacának jellemzője, hogy a gyógyszer végső felhasználójának, a betegeknek jelenleg még csekély a befolyása a gyógyszer kiválasztása során, és
-  figyelembe véve a fentiek mellett, hogy e célkitűzéseket olyan eszközökkel kell elérni, amelyek nem hátráltatják a gyógyszerkutatás és -fejlesztés fejlődését, illetve az Európai Unión belüli gyógyszer-kereskedelmet
-  a következő törvényt alkotja:
-      </p>
-    </div> -->
-    <div class="statute jszakaszSzoveg" [innerHTML]="jsz">
+    <div class="statute" [innerHTML]="jsz">
 
     </div>
   </div>
